--- a/operation/roles/fluentbit/templates/fluent-bit-ds.yaml.j2
+++ b/operation/roles/fluentbit/templates/fluent-bit-ds.yaml.j2
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: fluent-bit
-        image: fluent/fluent-bit:1.3.11
+        image: "{{ fluent_image }}:{{ fluent_tag }}"
         imagePullPolicy: Always
         ports:
           - containerPort: 2020
