--- a/operation/roles/fluentbit/templates/fluent-bit-ds.yaml.j2
+++ b/operation/roles/fluentbit/templates/fluent-bit-ds.yaml.j2
@@ -8,6 +8,11 @@ metadata:
     version: v1
     kubernetes.io/cluster-service: "true"
 spec:
+  selector:
+    matchLabels:
+      k8s-app: fluent-bit-logging
+      version: v1
+      kubernetes.io/cluster-service: "true"
   template:
     metadata:
       labels:
